// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Resource generates a valid request from a .Get call 1`] = `
Object {
  "headers": Object {
    "Accept": "application/vnd.api+json",
    "Content-Type": "application/vnd.api+json",
  },
  "method": "GET",
  "url": "/node/article/uuid-1234",
}
`;

exports[`Resource generates a valid request from a .GetList call 1`] = `
Object {
  "headers": Object {
    "Accept": "application/vnd.api+json",
    "Content-Type": "application/vnd.api+json",
  },
  "method": "GET",
  "url": "/node/article?page[offset]=0&page[limit]=50",
}
`;

exports[`Resource generates a valid request from a .New call 1`] = `
Object {
  "data": "{\\"data\\":{\\"type\\":\\"node--article\\",\\"attributes\\":{\\"title\\":\\"title\\"}}}",
  "headers": Object {
    "Accept": "application/vnd.api+json",
    "Content-Type": "application/vnd.api+json",
  },
  "method": "POST",
  "url": "/node/article",
}
`;

exports[`Resource generates a valid request from a .Update call 1`] = `
Object {
  "data": "{\\"data\\":{\\"type\\":\\"node--article\\",\\"id\\":\\"uuid-1234\\",\\"attributes\\":{\\"title\\":\\"title\\"}}}",
  "headers": Object {
    "Accept": "application/vnd.api+json",
    "Content-Type": "application/vnd.api+json",
  },
  "method": "PATCH",
  "url": "/node/article/uuid-1234",
}
`;

exports[`Resource generates valid filters and sort from a .GetList call 1`] = `
Object {
  "headers": Object {
    "Accept": "application/vnd.api+json",
    "Content-Type": "application/vnd.api+json",
  },
  "method": "GET",
  "url": "/node/article?page[offset]=0&page[limit]=50&filter[1][condition][path]=uid.name&filter[1][condition][value]=foo&sort[sort-created][path]=created",
}
`;

exports[`Resource generates valid filters from a .GetList call 1`] = `
Object {
  "headers": Object {
    "Accept": "application/vnd.api+json",
    "Content-Type": "application/vnd.api+json",
  },
  "method": "GET",
  "url": "/node/article?page[offset]=0&page[limit]=50&filter[1][condition][path]=uid.name&filter[1][condition][value]=foo",
}
`;
